<resources>
    <string name="app_name">Rehabilitation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_field_required">"Field required"</string>
    <string name="error_field_mismatch">"Password mismatch"</string>
    <string name="welcome_back">"Welcome Back"</string>
</resources>
