<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".Activity.LoginActivity">


    <Button
        android:id="@+id/btnSignUp"
        style="?android:textAppearanceSmall"
        android:layout_width="246dp"
        android:layout_height="40dp"


        android:layout_below="@+id/etPasswordConfirm"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/action_sign_up"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBack"
        style="?android:textAppearanceSmall"
        android:layout_width="246dp"
        android:layout_height="40dp"

        android:layout_below="@+id/btnSignUp"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"

        android:layout_marginBottom="80dp"
        android:background="@drawable/rounded_corners_button"

        android:text="Back"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/etUsername"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/etFirstName"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/prompt_firstName"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/etLastName"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/prompt_lastName"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/rounded_corner"
        android:hint="Confirm Password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_up_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="30dp" />


</RelativeLayout>